min-height to avoid overflowing in other sections

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,6 +1,6 @@
 .container {
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
 
     display: flex;
     flex-direction: column;
